src/objects/ACCL__Sales_Organization__c.object
<CustomObject>
    <description>This Object holds the details of the Sales Organization.</description>
    <fields>
        <fullName>ACCL__APM_Product_List_Relevant_Measures__c</fullName>
        <description>Measure codes defined for accountproductmeasure table</description>
        <label>Account Product Measure</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>BASP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Account_Number__c</fullName>
        <description>Account number at the bank</description>
        <label>Account Number</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Account_Product_List_Type__c</fullName>
        <description>Defines which Product list has to be used</description>
        <label>Account Product List Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>global</fullName>
                    <default>true</default>
                    <label>global</label>
                </value>
                <value>
                    <fullName>timedependent</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Automatic_Promotion_Push__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Activates the auto push on leave of the promotion.</description>
        <label>Automatic Promotion Push</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Available_Trade_Calendar_Color_Schemas__c</fullName>
        <description>Property Based Coloring of Promotion Bars within the Trade Calendar</description>
        <label>Available Trade Calendar Color Schemas</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                    <default>true</default>
                    <label>1</label>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__BIN__c</fullName>
        <description>Bank Identification Number</description>
        <label>BIN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Bank_Code__c</fullName>
        <description>Code of the bank</description>
        <label>Bank Code</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Bank__c</fullName>
        <description>The bank used for payments</description>
        <label>Bank</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Business_Unit__c</fullName>
        <description>Reference to the book keeping segment.</description>
        <label>Business Unit</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Call_Start_Time__c</fullName>
        <description>Stores call start time</description>
        <label>Call Start Time</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__City__c</fullName>
        <description>Name of a city.</description>
        <label>City</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Country__c</fullName>
        <description>Describes country.</description>
        <label>Country</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Currency__c</fullName>
        <description>Currency of the sales organization</description>
        <label>Currency</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>USD</fullName>
                </value>
                <value>
                    <fullName>CAD</fullName>
                </value>
                <value>
                    <fullName>JPY</fullName>
                </value>
                <value>
                    <fullName>GBP</fullName>
                </value>
                <value>
                    <fullName>EUR</fullName>
                </value>
                <value>
                    <fullName>NOK</fullName>
                </value>
                <value>
                    <fullName>CHF</fullName>
                </value>
                <value>
                    <fullName>RUB</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Custom_Calendar__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <description>Active custom calendar to which this Sales Organization is used.</description>
        <label>Custom Calendar</label>
        <referenceTo>ACCL__Custom_Calendar__c</referenceTo>
        <relationshipLabel>Sales Organizations</relationshipLabel>
        <relationshipName>Sales_Organizations_Custom_Calendar</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__DMI_Product_List_Relevant_Measures__c</fullName>
        <description>Measure codes defined for dailymeasureint table</description>
        <label>Daily Measure Int</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>DMI</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__DMR_Product_List_Relevant_Measures__c</fullName>
        <description>Measure codes defined for dailymeasurereal table</description>
        <label>Daily Measure Real</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>SHIP</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Default_Price_List_Type__c</fullName>
        <description>Default price list type of the sales organization</description>
        <label>Default Price List Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>WS1999</fullName>
                </value>
                <value>
                    <fullName>WS2000</fullName>
                </value>
                <value>
                    <fullName>NotRelevant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Default_Price_Type__c</fullName>
        <description>Default price type of the sales organization.</description>
        <label>Default Price Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>factory</fullName>
                </value>
                <value>
                    <fullName>consumer</fullName>
                </value>
                <value>
                    <fullName>NotRelevant</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Default_Tactic_Fund_Template__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>The default template used as a fallback if no fund template is selected in the tactic.</description>
        <label>Default Fund Template</label>
        <lookupFilter>
            <active>true</active>
            <booleanFilter>1 AND 2</booleanFilter>
            <filterItems>
                <field>ACCL__Fund_Template__c.ACCL__Active__c</field>
                <operation>equals</operation>
                <value>True</value>
            </filterItems>
            <filterItems>
                <field>$Source.ACCL__Sales_Org_Value__c</field>
                <operation>equals</operation>
                <valueField>ACCL__Fund_Template__c.ACCL__Sales_Org__c</valueField>
            </filterItems>
            <infoMessage>Select the Default Fund Template</infoMessage>
            <isOptional>false</isOptional>
        </lookupFilter>
        <referenceTo>ACCL__Fund_Template__c</referenceTo>
        <relationshipLabel>Sales Organization</relationshipLabel>
        <relationshipName>Sales_Organization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_1__c</fullName>
        <label>Description Language 1</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_2__c</fullName>
        <label>Description Language 2</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description_Language_3__c</fullName>
        <label>Description Language 3</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Description__c</fullName>
        <formula>CASE($User.ACCL__Language_Postfix__c,
&quot;Language1&quot;, ACCL__Description_Language_1__c,
&quot;Language2&quot;, BLANKVALUE(ACCL__Description_Language_2__c,ACCL__Description_Language_1__c),
&quot;Language3&quot;, BLANKVALUE(ACCL__Description_Language_3__c,ACCL__Description_Language_1__c),
&quot;Language4&quot;, BLANKVALUE(ACCL__Description_Language_4__c,ACCL__Description_Language_1__c),
ACCL__Description_Language_1__c)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Description</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Distance_Unit__c</fullName>
        <label>Distance Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>km</fullName>
                    <default>true</default>
                    <label>km</label>
                </value>
                <value>
                    <fullName>miles</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Email__c</fullName>
        <description>Email address</description>
        <label>Email</label>
        <type>Email</type>
    </fields>
    <fields>
        <fullName>ACCL__Enable_Acc_Cat_WDS_Profile__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Determines if the account, category, account and sales org specific profiles use the Profile bucket share calculation, which is found first.</description>
        <label>Enable Customer Category Profile</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Enable_Account_Set_Search_in_TPC__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Checkbox which enables/disables the account set search per salesorg.</description>
        <label>Enable Customer Set Search in TC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Enable_Auto_Tactic_Fund_Assignment__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Determines if the tacticfund assignment must be automatic.</description>
        <label>Enable Tactic Auto Fund Assignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Enable_Daily_Accuracy__c</fullName>
        <defaultValue>true</defaultValue>
        <description>Denotes whether day-accurate calculation is enabled for this sales org. If enabled, when the Read KPIs are read, the period buckets for the valid time range are determined for each product, and measures are applied to period buckets to consider time dependent values and improve accuracy.</description>
        <label>Enable Daily Accuracy</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Enable_Payment_Overwrite__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Payment Overwrite</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Enable_Sub_Account_Search_In_TPC__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Switchable sub account search filter.</description>
        <label>Enable Sub Account Search in TC</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Enable_Subperiod_Writeback__c</fullName>
        <defaultValue>false</defaultValue>
        <description>If true, it makes the writeback provide daily accurate values in the periods shared by two months (provided it is activated in the kpi definition).</description>
        <label>Enable Subperiod Writeback</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Enable_Subset_Load_Optimization__c</fullName>
        <defaultValue>true</defaultValue>
        <label>Enable Subset Load Optimization</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Enable_Tactic_Condition_Creation__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Enables condition creation for a tactic.</description>
        <label>Enable Tactic Condition Creation</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Fax__c</fullName>
        <description>Fax number</description>
        <label>Fax</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__First_Day_Of_Week__c</fullName>
        <description>Describes the days of the week</description>
        <label>First Day Of Week</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
                <value>
                    <fullName>4</fullName>
                </value>
                <value>
                    <fullName>5</fullName>
                </value>
                <value>
                    <fullName>6</fullName>
                </value>
                <value>
                    <fullName>7</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__First_Week_Of_Year__c</fullName>
        <description>This field displays the week for call scheduling</description>
        <label>First Week Of Year</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>1</fullName>
                </value>
                <value>
                    <fullName>2</fullName>
                </value>
                <value>
                    <fullName>3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Global_Sales_Org__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Global Sales Org</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__Has_Activated_Business_Years__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Indicates whether the business years are activated for the sales org.</description>
        <label>Has Activated Business Years</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>ACCL__IBAN__c</fullName>
        <description>International Bank Account-Number</description>
        <label>IBAN</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Language_1__c</fullName>
        <description>Language for the sales organization</description>
        <label>Language 1</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Language_2__c</fullName>
        <label>Language 2</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Language_3__c</fullName>
        <label>Language 3</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>en</fullName>
                </value>
                <value>
                    <fullName>de</fullName>
                </value>
                <value>
                    <fullName>fr</fullName>
                </value>
                <value>
                    <fullName>it</fullName>
                </value>
                <value>
                    <fullName>es</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Legal_Information__c</fullName>
        <description>Legal information to be shown on the print-outs</description>
        <label>Legal Information</label>
        <length>1024</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>ACCL__No__c</fullName>
        <description>House Number</description>
        <label>No</label>
        <length>20</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__PMR_Product_List_Relevant_Measures__c</fullName>
        <description>Measure codes defined for weeklypromotionmeasureresult and monthlypromotionmeasureresult table</description>
        <label>Promotion Measure Result</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>PIV</fullName>
                </value>
                <value>
                    <fullName>PTV</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__PM_Product_List_Relevant_Measures__c</fullName>
        <description>Measure codes defined for productmeasure table</description>
        <label>Product Measure</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>COGS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Phone__c</fullName>
        <description>Phone Number</description>
        <label>Phone</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Postbox__c</fullName>
        <description>Number of a number post box.</description>
        <label>Postbox</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Access_Definition_Policy__c</fullName>
        <description>Defines whether the edit and access rights are dependent on the product categories the user has assigned or the account and product category relationship.</description>
        <label>Promotion Access Definition Policy</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Independent_Anchors</fullName>
                    <default>true</default>
                    <label>Independent Anchors</label>
                </value>
                <value>
                    <fullName>Combined_Anchors</fullName>
                    <label>Combined Anchors</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Promotion_Aggregation_Level__c</fullName>
        <description>Defines at which level the product is located.</description>
        <label>Promotion Aggregation Level</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Category</fullName>
                </value>
                <value>
                    <fullName>SubCategory</fullName>
                </value>
                <value>
                    <fullName>Brand</fullName>
                    <default>true</default>
                    <label>Brand</label>
                </value>
                <value>
                    <fullName>Flavor</fullName>
                </value>
                <value>
                    <fullName>Package</fullName>
                </value>
                <value>
                    <fullName>Product</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__SWIFT__c</fullName>
        <description>International bank account identifier</description>
        <label>SWIFT</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Org_Value__c</fullName>
        <label>Sales Org Value</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>ACCL__Sales_Org</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Sales_Organization_Cluster__c</fullName>
        <description>Values for the organization cluster</description>
        <label>Sales Organization Cluster</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>NA</fullName>
                </value>
                <value>
                    <fullName>SA</fullName>
                </value>
                <value>
                    <fullName>EU</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__State__c</fullName>
        <description>Name of the State</description>
        <label>State</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Street__c</fullName>
        <description>Name of a street</description>
        <label>Street</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Tax_Jurisdiction_Code__c</fullName>
        <description>Tax account number</description>
        <label>TIN</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ACCL__Used_Reference_Date__c</fullName>
        <description>Determines which value is set in the view for the product hierarchy resolution reference date</description>
        <label>Used Reference Date</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>startdate</fullName>
                    <default>true</default>
                    <label>startdate</label>
                </value>
                <value>
                    <fullName>dynamic</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Volume_Unit__c</fullName>
        <label>Volume Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>l</fullName>
                    <default>true</default>
                    <label>l</label>
                </value>
                <value>
                    <fullName>gallon</fullName>
                </value>
                <value>
                    <fullName>cm3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__WMI_Product_List_Relevant_Measures__c</fullName>
        <description>Measure codes defined for weeklymeasureint table</description>
        <label>Weekly Measure Int</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>CONS</fullName>
                </value>
                <value>
                    <fullName>BSL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__WMR_Product_List_Relevant_Measures__c</fullName>
        <description>Measure codes defined for weeklymeasurereal table</description>
        <label>Weekly Measure Real</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>WMR</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Week_Day_Share_Profile__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <description>Week Day Share Profile that is used as default for this Sales Organization.</description>
        <label>Week Day Share Profile</label>
        <referenceTo>ACCL__Week_Day_Share_Profile__c</referenceTo>
        <relationshipLabel>Sales Organization</relationshipLabel>
        <relationshipName>Sales_Organization</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ACCL__Weight_Unit__c</fullName>
        <label>Weight Unit</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>ton</fullName>
                </value>
                <value>
                    <fullName>kg</fullName>
                    <default>true</default>
                    <label>kg</label>
                </value>
                <value>
                    <fullName>pound</fullName>
                </value>
                <value>
                    <fullName>oz</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>ACCL__Zip_Code__c</fullName>
        <description>Postal code.</description>
        <label>Zip Code</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>MDLZ_AvgCaseCost__c</fullName>
        <label>Avg Case Cost</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>MDLZ_Order_Lock_Setting__c</fullName>
        <description>Order lock setting for NOS orders</description>
        <label>Order Lock Setting</label>
        <type>Time</type>
    </fields>
    <label>Sales Organization</label>
    <listViews>
        <fullName>ACCL__All</fullName>
        <columns>NAME</columns>
        <columns>ACCL__Description__c</columns>
        <columns>ACCL__Currency__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
    <nameField>
        <label>Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Sales Organization</pluralLabel>
    <sharingModel>Read</sharingModel>
    <validationRules>
        <fullName>ACCL__Call_Start_Time_Format_Validation</fullName>
        <active>true</active>
        <errorConditionFormula>AND( 
NOT(ISBLANK( ACCL__Call_Start_Time__c)), 
NOT(REGEX(ACCL__Call_Start_Time__c, &quot;([01]?[0-9]|2[0-3]):[0-5][0-9]&quot;)) 
)</errorConditionFormula>
        <errorDisplayField>ACCL__Call_Start_Time__c</errorDisplayField>
        <errorMessage>Please enter the correct format for Call Start Time (hh:mm).</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Check_If_Name_Is_Unique</fullName>
        <active>true</active>
        <errorConditionFormula>and( 
Name = VLOOKUP 
($ObjectType.ACCL__Sales_Organization__c.Fields.Name , $ObjectType.ACCL__Sales_Organization__c.Fields.Name, Name ), 

not( 
Id=VLOOKUP 
($ObjectType.ACCL__Sales_Organization__c.Fields.Id , $ObjectType.ACCL__Sales_Organization__c.Fields.Name, Name )))</errorConditionFormula>
        <errorMessage>Sales Organization Name already exists, please enter different Name.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Enable_Daily_Accuracy_Mandatory</fullName>
        <active>true</active>
        <description>Enable Daily Accuracy should always be checked</description>
        <errorConditionFormula>NOT(ACCL__Enable_Daily_Accuracy__c)</errorConditionFormula>
        <errorDisplayField>ACCL__Enable_Daily_Accuracy__c</errorDisplayField>
        <errorMessage>Enable Daily Accuracy must be checked.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Language_Unique_Validation_Rule</fullName>
        <active>true</active>
        <errorConditionFormula>IF(OR((NOT(ISBLANK(Text(ACCL__Language_1__c))) &amp;&amp; OR(Text(ACCL__Language_1__c)== Text(ACCL__Language_2__c), Text(ACCL__Language_1__c)== Text(ACCL__Language_3__c), Text(ACCL__Language_1__c)== Text(ACCL__Language_4__c))),(NOT(ISBLANK(TEXT(ACCL__Language_2__c))) &amp;&amp; OR(Text(ACCL__Language_2__c)== Text(ACCL__Language_3__c), Text(ACCL__Language_2__c)== Text(ACCL__Language_4__c))),(NOT(ISBLANK(Text(ACCL__Language_3__c))) &amp;&amp; (Text(ACCL__Language_3__c)== Text(ACCL__Language_4__c) ))),true,false)</errorConditionFormula>
        <errorMessage>Language already exists, please enter different Language.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Sales_Org_Name_length</fullName>
        <active>true</active>
        <description>Name must be four characters.</description>
        <errorConditionFormula>LEN(Name) &lt;&gt; 4</errorConditionFormula>
        <errorMessage>Name must be four characters.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Validate_Sales_Org_for_Week_Day_Profile</fullName>
        <active>true</active>
        <description>Sales Org of the Sales Organization record should match with the Sales Org of the selected Week Day Share Profile.</description>
        <errorConditionFormula>AND(
          NOT(ISBLANK( ACCL__Week_Day_Share_Profile__c)
          ),
          (
          TEXT(ACCL__Sales_Org_Value__c) &lt;&gt;
          TEXT(ACCL__Week_Day_Share_Profile__r.ACCL__Sales_Org__c)
          )
          )</errorConditionFormula>
        <errorMessage>The Sales Organization and the selected Week Day Share Profile must have the same Sales Org.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Validation_rule_for_fund_template</fullName>
        <active>false</active>
        <errorConditionFormula>IF( ACCL__Enable_Auto_Tactic_Fund_Assignment__c == true  &amp;&amp;  ISBLANK(ACCL__Default_Tactic_Fund_Template__c),true,false  )</errorConditionFormula>
        <errorDisplayField>ACCL__Default_Tactic_Fund_Template__c</errorDisplayField>
        <errorMessage>Please select the Default Fund Template to proceed.</errorMessage>
    </validationRules>
    <validationRules>
        <fullName>ACCL__Validation_rule_for_sales_org_name</fullName>
        <active>true</active>
        <description>Name must match with selected Sales Org value.</description>
        <errorConditionFormula>Name  &lt;&gt; Text( ACCL__Sales_Org_Value__c )</errorConditionFormula>
        <errorMessage>Name must match with selected Sales Org value.</errorMessage>
    </validationRules>
</CustomObject>